k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fde-mtl
spec:
  selector:
    app: fde-mtl
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
