k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fde-mtl
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: tls-fde-mtl
    hosts:
      - fde-mtl.ca
      - projet-famille.ca
  rules:
  - host: fde-mtl.ca
    http:
      paths:
      - path: /
        backend:
          serviceName: fde-mtl
          servicePort: 80
  - host: fde-mtl.ca
    http:
      paths:
      - path: /
        backend:
          serviceName: fde-mtl
          servicePort: 80
